# EasyEat-ETL-

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PRD_EasyEat_ETL_Pipeline.docx  TRD_EasyEat_ETL_Pipeline.docx
src/: __main__.py  config.py  models.py  pipeline.py  seed.py  watermark.py
src/db/: mongo.py  postgres.py
src/extract/: extractor.py
src/load/: loader.py
src/transform/: transformer.py
tests/: conftest.py  test_extract.py  test_idempotency.py  test_load.py  test_pipeline_e2e.py  test_transform.py
